--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,5 +9,6 @@
 * {
   font-size: 16px;
   line-height: 1.5;
+  color: #13284b;
   font-family: 'Lato', 'Noto Sans TC', 'Noto Sans SC', sans-serif;
 }
