--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,5 +10,26 @@
   font-size: 16px;
   line-height: 1.5;
   color: #13284b;
-  font-family: 'Lato', 'Noto Sans TC', 'Noto Sans SC', sans-serif;
+  font-family: 'Lato', 'Noto Sans TC', 'Noto Sans SC', sans-serif !important;
+}
+
+/* mui style */
+.MuiTabs-indicator {
+  background-color: #4aa6b5 !important;
+}
+.MuiPickersDay-root.Mui-selected {
+  background-color: #4aa6b5 !important;
+}
+.MuiPickersDay-today {
+  border: 1px solid #4aa6b5 !important;
+}
+.MuiClock-pin {
+  background: #4aa6b5 !important;
+}
+.MuiClockPointer-root {
+  background: #4aa6b5 !important;
+}
+.MuiClockPointer-thumb {
+  background: #4aa6b5 !important;
+  border: 16px solid #4aa6b5 !important;
 }
