--- a/webapp/src/style/index.css
+++ b/webapp/src/style/index.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;300;400;700;900&display=swap');
+@import 'tailwindcss';
+@import './color.css';
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-* {
-  font-size: 16px;
-  line-height: 0.5;
-  color: #13284b;
-  font-family: 'Lato', 'Noto Sans TC', 'Noto Sans SC', sans-serif !important;
+@layer base {
+  body {
+    font-size: 16px;
+    line-height: 0.5;
+    color: #13284b;
+    font-family: 'Lato', 'Noto Sans TC', 'Noto Sans SC', sans-serif !important;
+  }
 }
 
 /* mui style */
